Fix another typo.

--- a/Paper/BSV_Semantics.tex
+++ b/Paper/BSV_Semantics.tex
@@ -1361,7 +1361,7 @@ evalExpr system env e = eval e
     where
         eval :: Expr -> IO (Val, [Action], [MC])
 
-        {\it ... clauses for classical eval of identifiers, contants, ...}
+        {\it ... clauses for classical eval of identifiers, constants, ...}
         {\it ...   primitive functions, lambdas ...}
         {\it ...   conditionals, loops, blocks ...}
         {\it ...}
